# lunote

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  print.html  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: pull_request_template.md  release.yml
.github/workflows/: ci.yml  release-build.yml  release.yml
docs/: README.de.md  README.en.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  compatibility-regression-baseline.md  packaging-strategy.md
docs/Templates/: Daily.md  Default.md  README.md
docs/guide/: README.md  codeblock-cm-migration.md  design-system.md  platform-differences.md  shortcuts-and-menus.md  themes.md
docs/theme/: README.md  external-css.md  obsidian-compat.md
docs/theme-example/: README.md  SELECTORS.md
public/: boot-early-theme.js  boot-shell.css
scripts/: README.md  apply_missing_ui_locale_batch.py  build-plugin-catalog-packages.mjs  build_ui_locales.py  capture-plugin-catalog-media.mjs  export_menu_canonical.py  export_menu_rust_manifest.py  import-windows-certificate.ps1  prepare-signing.mjs  release-publish.mjs  render-html-pdf.mjs  serve-plugin-catalog.mjs  shell_menu_to_ui_key.py  sign-deb.mjs  sync-version.mjs  sync_shell_menu_from_ui.py  tauri-build-windows.mjs  tsconfig.playwright.json  validate_locale.py  validate_menu_i18n_sync.py  validate_menu_runtime.py  validate_shell_locale.py
scripts/export/: chrome-executable-candidates.json  render-html-pdf.mjs
scripts/lib/: chrome-executable-candidates.mjs  locale_contract.py  playwright-helpers.ts  render-html-pdf-core.mjs
scripts/locale/: append_sponsor_to_readmes.py  build_ui_locales.py  export_menu_canonical.py  export_menu_rust_manifest.py  shell_menu_to_ui_key.py  sync_shell_menu_from_ui.py  sync_sponsor_to_readmes.py  validate_locale.py  (+3 more)
src/: App.css  App.tsx  index.css  lunaPaths.ts  lunaPersistence.ts  main.tsx  markdown-it-extras.d.ts  markdown-it-sup-sub.d.ts  markdownExport.ts  remarkEqualHighlight.ts  theme-presets.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  secondary-webview.json
src-tauri/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh-CN.json  zh-TW.json
src-tauri/icons/: icon.icns
src-tauri/resources/: mac-menu-boot.json
src-tauri/src/: app_menu.rs  app_settings.rs  chrome_candidates.rs  clipboard.rs  lib.rs  logging.rs  luna_paths.rs  mac_boot_menu.rs  mac_menu_template.rs  mac_window.rs  menu_manifest.rs  pdf_render.rs  plugins.rs  theme.rs  theme_migration.rs
src-tauri/src/commands/: document_history.rs  mod.rs
src-tauri/src/core/: atomic_io.rs  files.rs  mod.rs  path_safety.rs  search.rs  security.rs  shell_reveal.rs  workspace_watch.rs
src-tauri/src/shell_locale/: mod.rs  schema.rs
src/i18n/: index.ts  (+11 more)
(+1170 files in other folders)
