[package]
name = "app"
version = "0.4.0"
description = "Lunote — local-first cross-platform Markdown notes and PKM desktop app (Tauri)"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
walkdir = "2.5.0"
notify = "8.0.0"
base64 = "0.22"
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
sys-locale = "0.3.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
