[package]
name = "app"
version = "0.7.0"
description = "Lunote — local-first cross-platform Markdown notes and PKM desktop app (Tauri)"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset", "image-png", "tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
walkdir = "2.5.0"
notify = "8.0.0"
base64 = "0.22"
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
sys-locale = "0.3.2"
tauri-plugin-os = "2"
uuid = { version = "1.20.0", features = ["v4"] }
dirs = "6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSImage", "NSWindow", "NSColor", "NSAppearance"] }
objc2-foundation = "0.3.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
